--- a/client/src/styles/navBar.scss
+++ b/client/src/styles/navBar.scss
@@ -26,18 +26,23 @@
     }
     &-formSearch {
         background: white;
+        border-radius: 5px;
         button {
             border: none;
             background: white;
             cursor: pointer;
+            border-radius: 5px;
         }
         input {
             border: none;
+            border-radius: 5px;
+            
         }
         
     }
     &-iconCart {
         margin-left: 2rem;
+        
     }
     &-bottom {
         color: $color1;
