--- a/client/src/styles/footer.scss
+++ b/client/src/styles/footer.scss
@@ -1,12 +1,22 @@
 @import "./setting.scss";
 
 .footer {
-    width: 80%;
+    width: 100%;
     margin: 5rem auto 0;
-    padding-top: 3rem;
+    // padding-top: 3rem;
     text-align: center;
     line-height: 3rem;
-    border-top: solid 1px $color1;
+    // border-top: solid 1px $color1;
+    position: relative;
+    &::before {
+        content: "";
+        display: block;
+        height: 1px;
+        width: 60%;
+        background: $color1;
+        margin: 0 auto;
+
+    }
     
     & ul {
         margin-top: 2.5rem;
@@ -14,7 +24,7 @@
 
     }
     & h3 {
-        margin: 0;
+        // margin: 0;
         font-size: calc(1rem + 1.3vw);
     }
     & li {
