--- a/client/src/styles/loginForm.scss
+++ b/client/src/styles/loginForm.scss
@@ -1,9 +1,9 @@
 @import "./setting.scss";
 
 .loginForm {
-  width: 40%;
+  width: 30%;
   margin: 10rem 0 0;
-  height: 50vh;
+  // height: 50vh;
   padding: 0 8%;
   color: $color1;
   & h2 {
@@ -18,7 +18,7 @@
   }
   & input {
     font-family: "Dancing Script", sans-serif;
-    margin-bottom: 2rem;
+    margin-bottom: 1.6rem;
     font-size: calc(1rem + 0.8vw);
     border-radius: 5px;
     padding: 0.5rem 1rem;
@@ -40,3 +40,12 @@
     filter: brightness(1.5);
   }
 }
+
+// .forms-container {
+//   // width: 100%;
+//   // width: 100%;
+//   display: flex;
+//   // flex-direction: column;
+//   // justify-content: center;
+  
+// }
